--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\Juegos\Añadir.cshtml.cs~RF679b9fe9.TMP" />
     <None Remove="Pages\Shared\_LoginPartial.cshtml~RF52f04f21.TMP" />
   </ItemGroup>
 
