--- a/pepeizqs deals web/appsettings.json
+++ b/pepeizqs deals web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "pepeizqs_deals_webContextConnection": "Server=hostingmssql07; Initial Catalog=pepeizq2_simply__winspace_es_1; User ID=pepeizq2_simply__winspace_es_wmx00; Password='605534365'; TrustServerCertificate=True;"
+    "pepeizqs_deals_webContextConnection": "Server=hostingmssql07; Initial Catalog=pepeizq2_simply__winspace_es_1; User ID=pepeizq2_simply__winspace_es_wmx00; Password='605534365'; TrustServerCertificate=True; Encrypt=False;"
   }
 }
