--- a/pepeizqs deals web/Properties/launchSettings.json
+++ b/pepeizqs deals web/Properties/launchSettings.json
@@ -26,10 +26,11 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "sqlDebugging": true,
       "nativeDebugging": true,
+      "ancmHostingModel": "OutOfProcess"
     }
   },
   "iisSettings": {
