--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -10,10 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Herramientas\Divisas.cs~RF419ed6bf.TMP" />
+    <Content Remove="Pages\Admin\Tiendas\Pendientes.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Herramientas\Divisas.cs~RF419ed6bf.TMP" />
+    <None Remove="Pages\Componentes\Buscador.razor~RF47a2b634.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Admin\Tiendas\Pendientes.cshtml" />
     <_ContentIncludedByDefault Remove="wwwroot\imagenes\drm\microsoft.png" />
   </ItemGroup>
 
@@ -32,6 +38,14 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Quartz.AspNetCore" Version="3.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Admin\Tiendas\Pendientes.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Admin\Tiendas\Pendientes.cshtml" />
   </ItemGroup>
 
 </Project>
