--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -17,10 +17,12 @@
     <None Remove="BaseDatos\Juegos\Precios.cs~RF662827a9.TMP" />
     <None Remove="Herramientas\Divisas.cs~RF419ed6bf.TMP" />
     <None Remove="Herramientas\TareasGestionador.cs~RF6a54dce4.TMP" />
+    <None Remove="Juegos\JuegoFicha.cs~RF864f1e.TMP" />
     <None Remove="Pages\Componentes\Buscador.razor~RF47a2b634.TMP" />
   </ItemGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Admin\Tiendas.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Admin\Tiendas\Pendientes.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\LastAdded.cshtml" />
     <_ContentIncludedByDefault Remove="wwwroot\imagenes\drm\microsoft.png" />
@@ -53,6 +55,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\LastAdded.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Admin\Tiendas.cshtml" />
   </ItemGroup>
 
 </Project>
