--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -13,6 +13,7 @@
     <None Remove="BaseDatos\Juegos\Precios.cs~RF662827a9.TMP" />
     <None Remove="Herramientas\Divisas.cs~RF419ed6bf.TMP" />
     <None Remove="Herramientas\TareasGestionador.cs~RF6a54dce4.TMP" />
+    <None Remove="Juegos\JuegoDRM.cs~RF33e4e895.TMP" />
     <None Remove="Juegos\JuegoFicha.cs~RF864f1e.TMP" />
     <None Remove="Pages\Componentes\Buscador.razor~RF47a2b634.TMP" />
   </ItemGroup>
