--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -22,9 +22,10 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Pages\Admin\Tiendas.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Noticias.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\JuegoFichaDeseado.razor" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\Suscripciones2.razor" />
     <_ContentIncludedByDefault Remove="Pages\LastAdded.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\News.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Wishlist.cshtml" />
     <_ContentIncludedByDefault Remove="wwwroot\imagenes\drm\microsoft.png" />
   </ItemGroup>
@@ -71,7 +72,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\Suscripciones2.razor" />
+    <UpToDateCheckInput Remove="Pages\News.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Noticias.razor" />
   </ItemGroup>
 
 </Project>
