--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -25,6 +25,7 @@
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Noticias.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\JuegoFichaDeseado.razor" />
     <_ContentIncludedByDefault Remove="Pages\LastAdded.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\LastNews.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\News.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Wishlist.cshtml" />
     <_ContentIncludedByDefault Remove="wwwroot\imagenes\drm\microsoft.png" />
@@ -77,6 +78,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\Componentes\Admin\Noticias.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\LastNews.cshtml" />
   </ItemGroup>
 
 </Project>
