--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -13,6 +13,7 @@
     <None Remove="BaseDatos\Juegos\Cargar.cs~RF3943d089.TMP" />
     <None Remove="BaseDatos\Juegos\Precios.cs~RF662827a9.TMP" />
     <None Remove="Herramientas\Divisas.cs~RF419ed6bf.TMP" />
+    <None Remove="Herramientas\sbkzi024.s2p~" />
     <None Remove="Herramientas\TareasGestionador.cs~RF6a54dce4.TMP" />
     <None Remove="Juegos\JuegoDRM.cs~RF33e4e895.TMP" />
     <None Remove="Juegos\JuegoFicha.cs~RF864f1e.TMP" />
@@ -24,6 +25,7 @@
     <_ContentIncludedByDefault Remove="Pages\Admin\Tiendas.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Noticias.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\JuegoFichaDeseado.razor" />
+    <_ContentIncludedByDefault Remove="Pages\Free.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\LastAdded.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\LastNews.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\News.cshtml" />
@@ -32,19 +34,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="7.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.9" />
+    <PackageReference Include="Hangfire" Version="1.8.5" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.5" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.8.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.10" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.1" />
     <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
@@ -82,6 +87,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\LastNews.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Free.cshtml" />
   </ItemGroup>
 
 </Project>
