--- a/.gitignore
+++ b/.gitignore
@@ -362,4 +362,6 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+# Conexion Base Datos
 appsettings.json
+appsettings.Development.json
