--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -116,4 +116,8 @@
     <UpToDateCheckInput Remove="Pages\Bundle.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\web.pubxml" />
+  </ItemGroup>
+
 </Project>
