--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="BaseDatos\Juegos\Cargar.cs~RF7adab4d.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.UseNls" Value="true" />
     <RuntimeHostConfigurationOption Include="System.Net.DisableIPv6" Value="true" />
   </ItemGroup>
