--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -119,11 +119,21 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Areas\Identity\Componentes\Contraseña.razor" />
+    <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Keys.cshtml" />
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\CabeceraUsuario.razor" />
   </ItemGroup>
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\CabeceraUsuario.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Areas\Identity\Pages\Account\Manage\Keys.cshtml" />
   </ItemGroup>
 
 </Project>
