--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -15,6 +15,7 @@
     <None Remove="Plantillas\CambioContraseña.html" />
     <None Remove="Plantillas\ContraseñaOlvidada.html" />
     <None Remove="Plantillas\ContraseñaReseteada.html" />
+    <None Remove="Plantillas\NuevaNoticia.html" />
   </ItemGroup>
 
   <ItemGroup>
@@ -108,6 +109,9 @@
     <Content Include="Plantillas\ContraseñaReseteada.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Plantillas\NuevaNoticia.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Plantillas\NuevoMinimo.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -121,15 +125,10 @@
     <_ContentIncludedByDefault Remove="Areas\Identity\Componentes\Contraseña.razor" />
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Keys.cshtml" />
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
-    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\CabeceraUsuario.razor" />
   </ItemGroup>
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\CabeceraUsuario.razor" />
   </ItemGroup>
 
   <ItemGroup>
