--- a/pepeizqs deals web/Properties/launchSettings.json
+++ b/pepeizqs deals web/Properties/launchSettings.json
@@ -30,8 +30,7 @@
         "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "sqlDebugging": true,
-      "nativeDebugging": true,
-      "ancmHostingModel": "OutOfProcess"
+      "nativeDebugging": true
     }
   },
   "iisSettings": {
