--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <PackageReference Include="ImageProcessor" Version="2.9.1" />
     <PackageReference Include="ImageProcessor.Plugins.WebP" Version="1.3.0" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
