--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Keys.cshtml" />
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Juego.razor" />
   </ItemGroup>
 
   <ItemGroup>
@@ -131,6 +132,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Areas\Identity\Pages\Account\Manage\Keys.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Juego.razor" />
   </ItemGroup>
 
 </Project>
