--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <None Remove="BaseDatos\Juegos\Actualizar.cs~RF265fa95c.TMP" />
     <None Remove="Pages\Componentes\Admin\Pendientes.razor~RF25ab83bf.TMP" />
+    <None Remove="Pages\Componentes\Secciones\Juego.razor~RFb3c9edb.TMP" />
   </ItemGroup>
 
   <ItemGroup>
