--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Pages\Componentes\Admin\Sorteos.razor" />
+    <Content Remove="Pages\Componentes\Secciones\Sorteos.razor" />
   </ItemGroup>
 
   <ItemGroup>
@@ -132,6 +132,7 @@
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Juego.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Sorteos.razor" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\Sorteos.razor" />
   </ItemGroup>
 
   <ItemGroup>
@@ -151,7 +152,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Pages\Componentes\Admin\Sorteos.razor" />
+    <UpToDateCheckInput Remove="Pages\Componentes\Secciones\Sorteos.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Componentes\Secciones\Sorteos.razor" />
   </ItemGroup>
 
 </Project>
