--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -153,4 +153,8 @@
     <UpToDateCheckInput Remove="Pages\Componentes\Secciones\Sorteos.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\robots.txt" />
+  </ItemGroup>
+
 </Project>
