--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -16,6 +16,7 @@
     <None Remove="Areas\Identity\Data\Usuario.cs~RF12b6df03.TMP" />
     <None Remove="BaseDatos\Juegos\Actualizar.cs~RF265fa95c.TMP" />
     <None Remove="BaseDatos\Sorteos\Insertar.cs~RF12f75f67.TMP" />
+    <None Remove="Herramientas\Divisas.cs~RF3a149905.TMP" />
     <None Remove="Pages\Componentes\Admin\Pendientes.razor~RF25ab83bf.TMP" />
     <None Remove="Pages\Componentes\Secciones\Juego.razor~RFb3c9edb.TMP" />
   </ItemGroup>
