--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <None Remove="BaseDatos\Tiendas\Admin.cs~RF1cf1629c.TMP" />
     <None Remove="Pages\Componentes\Secciones\Juego.razor~RF24b2ba79.TMP" />
+    <None Remove="Tareas\Sorteos.cs~RF2f43e647.TMP" />
   </ItemGroup>
 
   <ItemGroup>
