--- a/pepeizqs deals web/pepeizqs deals web.csproj
+++ b/pepeizqs deals web/pepeizqs deals web.csproj
@@ -131,6 +131,7 @@
     <_ContentIncludedByDefault Remove="Areas\Identity\Pages\Account\Manage\Notifications.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Admin\Errores.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Juego.razor" />
+    <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Portada.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Admin\Sorteos.razor" />
     <_ContentIncludedByDefault Remove="Pages\Componentes\Secciones\Sorteos.razor" />
   </ItemGroup>
@@ -161,6 +162,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\Admin\Errores.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Componentes\Admin\Portada.razor" />
   </ItemGroup>
 
 </Project>
